--- a/src/components/appBody/newsFeed/posts/Post.css
+++ b/src/components/appBody/newsFeed/posts/Post.css
@@ -19,10 +19,15 @@
     font-size: 15px
 }
 
+.post__info > p {
+    font-size: 13px;
+    color: gray;
+}
+
 .post__body {
     overflow-wrap: anywhere;
 }
 
 .post__buttons {
-    display: flex;
+    display: flex
 }
